# repo-template-python

./: .pdm-python  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  gitguardian.yaml  mirror-action.yml  snyk.yaml  spellcheck.yaml
config/spellcheck/: .wordlist.txt
src/: test.py
